// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NodeView display main page based on config 1`] = `
<div>
  <div
    class="container"
  >
    <div
      style="height: 1010px; width: 100%;"
    >
      ReactFlow
    </div>
  </div>
</div>
`;

exports[`NodeView display main page based on config 2`] = `
<div>
  <div
    class="container"
  >
    <div
      style="height: 710px; width: 100%;"
    >
      ReactFlow
    </div>
  </div>
</div>
`;

exports[`NodeView display main page based on config 3`] = `
<div>
  <div
    class="container"
  >
    <div
      style="height: 710px; width: 100%;"
    >
      ReactFlow
    </div>
  </div>
</div>
`;

exports[`NodeView display main page based on config 4`] = `
<div>
  <div
    class="container"
  >
    <div
      style="height: 710px; width: 100%;"
    >
      ReactFlow
    </div>
  </div>
</div>
`;

exports[`NodeView display main page based on config 5`] = `
<div>
  <div
    class="container"
  >
    <div
      style="height: 710px; width: 100%;"
    >
      ReactFlow
    </div>
  </div>
</div>
`;
